* fixed bug #47842      sscanf() does not support 64-bit values

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@299484 c90b9560-bf6c-de11-be94-00142212c4b1